# DASH

./: .gitignore  CMakeLists.txt  README.md  roadmap.md
.github/workflows/: ci-tests.yml
config/: config.py
coverage/: cmd_line  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage/include/core/: command_handlers.hpp.func-c.html  command_handlers.hpp.func.html  command_handlers.hpp.gcov.html  dais_agents.hpp.func-c.html  dais_agents.hpp.func.html  engine.hpp.func-c.html  engine.hpp.func.html  engine.hpp.gcov.html  file_analyzer.hpp.func-c.html  file_analyzer.hpp.func.html  file_analyzer.hpp.gcov.html  help_text.hpp.func-c.html  help_text.hpp.func.html  help_text.hpp.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  session.hpp.func-c.html  session.hpp.func.html  session.hpp.gcov.html  thread_pool.hpp.func-c.html  thread_pool.hpp.func.html  thread_pool.hpp.gcov.html
coverage/src/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-c.html  main.cpp.func.html  main.cpp.gcov.html
coverage/src/core/: engine.cpp.func-c.html  engine.cpp.func.html  engine.cpp.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  session.cpp.func-c.html  session.cpp.func.html  session.cpp.gcov.html
include/core/: command_handlers.hpp  engine.hpp  file_analyzer.hpp  help_text.hpp  session.hpp
scripts/: ci_setup.sh  generate_coverage.sh  test_local.sh
shell_scripts/: build_agents.sh
src/: main.cpp
src/core/: engine.cpp  session.cpp
src/py_scripts/: config.py  db_handler.py  tester.py
src/remote/: Dockerfile.agents  agent.cpp  build_agents.sh  generate_header.py
tests/: requirements.txt  setup_db.py  test_build.sh
tests/docker/: Dockerfile  alpine-3.20.Dockerfile  arch.Dockerfile  debian-13.Dockerfile  fedora-40.Dockerfile  run.sh  ubuntu-24.04.Dockerfile
tests/fixtures/: data.csv  sample.txt
tests/fixtures/subdir/: nested1.txt  nested2.txt  nested3.txt
tests/functional/: test_commands.py  test_db_commands.py  test_db_logic.py  test_ls_output.py
